Minor tweet detail image stretch fix.

--- a/TwitterCards/Presentation/CSS/Demo.less
+++ b/TwitterCards/Presentation/CSS/Demo.less
@@ -98,7 +98,7 @@
 		img {
 			margin: 0 auto;
 			display: block;
-			height: 300px;
+			max-height: 400px;
 			max-width: 600px;
 		}
 	}
